feature: Add Vector Queue Implementation